kubflowcd/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kubflow-servicecl
  namespace: kubflow
  labels:
    job: node-kubflow
    app: kubflow
spec:
  type: ClusterIP
  selector:
    app: kubflow
  ports:
    - name: kubflow-port
      port: 80
      targetPort: 5000
